--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     />
     <title>Solid App</title>
   </head>
-  <body>
+  <body class="flex col items-center">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="app content-full"></div>
   </body>
 </html>
