--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>Solid App</title>
+    <link
+      rel="preload"
+      href="/src/assets/fonts/Gilroy-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <meta name="description" content="Job Offer For You" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
