--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>App - iFruit</title>
     <meta name="description" content="Job Offer For You" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self' 'unsafe-inline' https://uselessfacts.jsph.pl https://api.frankfurter.app"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
