Restricts the URLs which can be used

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Job Offer For You" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self' 'unsafe-inline' https://uselessfacts.jsph.pl https://api.frankfurter.app"
+      content="base-uri 'self'; default-src 'self'; style-src 'unsafe-inline'; connect-src 'self' https://uselessfacts.jsph.pl https://api.frankfurter.app"
     />
   </head>
   <body>
