Create draft OAuth for calendar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Job Offer For You" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="base-uri 'self'; default-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://uselessfacts.jsph.pl https://dummyjson.com;"
+      content="base-uri 'self'; default-src 'self' https://apis.google.com https://accounts.google.com https://content.googleapis.com; style-src 'self' 'unsafe-inline'; connect-src 'self' https://uselessfacts.jsph.pl https://dummyjson.com;"
     />
   </head>
   <body>
