--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>App - iFruit</title>
-    <meta name="description" content="Job Offer For You" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="base-uri 'self'; default-src 'self' https://apis.google.com https://accounts.google.com https://content.googleapis.com; style-src 'self' 'unsafe-inline'; connect-src 'self' https://uselessfacts.jsph.pl https://dummyjson.com;"
-    />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="flex col items-center"></div>
 
-    <script src="/src/index.tsx" type="module"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+  <title>App - iFruit</title>
+  <meta name="description" content="Job Offer For You" />
+  <meta http-equiv="Content-Security-Policy"
+    content="base-uri 'self'; default-src 'self' https://apis.google.com https://accounts.google.com https://content.googleapis.com; style-src 'self' 'unsafe-inline'; connect-src 'self' https://uselessfacts.jsph.pl https://dummyjson.com https://oauth2.googleapis.com;" />
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root" class="flex col items-center"></div>
+
+  <script src="/src/index.tsx" type="module"></script>
+</body>
+
 </html>
