Get rid of identity: GAPI — The Google APIs Client Library for Browser JavaScript

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>App - iFruit</title>
   <meta name="description" content="Job Offer For You" />
   <meta http-equiv="Content-Security-Policy"
-    content="base-uri 'self'; default-src 'self' https://apis.google.com https://accounts.google.com https://content.googleapis.com; style-src 'self' 'unsafe-inline'; connect-src 'self' https://uselessfacts.jsph.pl https://dummyjson.com https://oauth2.googleapis.com;" />
+    content="base-uri 'self'; default-src 'self' https://apis.google.com https://accounts.google.com https://content.googleapis.com; style-src 'self' 'unsafe-inline'; connect-src 'self' https://uselessfacts.jsph.pl https://dummyjson.com https://apis.google.com;" />
 </head>
 
 <body>
